Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101008

Using Text.NativeRendering results in characters drawn too close to each other with fractional scale factors

XMLWordPrintable

    • Windows
    • 84c5ae1947 (qt/qtdeclarative/6.3) f385c327ee (qt/qtdeclarative/6.4) 97cc7023ce (qt/qtdeclarative/dev) 84c5ae1947 (qt/tqtc-qtdeclarative/6.3) f385c327ee (qt/tqtc-qtdeclarative/6.4) 97cc7023ce (qt/tqtc-qtdeclarative/dev) 84c5ae1947 (qt/qtdeclarative/6.3.2)

      On Windows using Text.NativeRendering causes letters to be drawn either too close to or far away from each other in many cases. The same problem doesn't seem to occur with QtRendering.

      Steps to reproduce the problem:

      1. set a fractional scale factor (e.g. 125%)
      2. run the attached application.

      The text may also look a bit off if scrolled slowly vertically.

        1. qtbug101008.zip
          2 kB
          Miika Pernu
        2. screenshot.PNG
          56 kB
          Miika Pernu
        3. image-2022-03-17-14-47-29-992.png
          65 kB
          Cédric Le Dillau
        4. withpatch.png
          88 kB
          Eskil Abrahamsen Blomfeldt
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            miikapernu Miika Pernu
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: